@@ -95,7 +95,7 @@
 #define STDC_HEADERS 1
 
 /* Most recent revision number in the version control system */
-#define VCS_REVISION "93"
+#define VCS_REVISION "101"
 
 /* Version number of package */
 #define VERSION "2.5"
